add update approval API, update endpoint
