# routes/admin.js
@@ -3,6 +3,10 @@ var router = express.Router();
 const adminController = require('../controllers/adminController');
 const authenticateToken = require('../middleware/authenticateAccessToken');
 
-router.get('/accounts', authenticateToken, adminController.list_approval_account);
+router.use(authenticateToken);
+
+router.get("/", adminController.list_approval_account);
+
+router.put("/:id?", adminController.update_approval);
 
 module.exports = router;
